--- a/docs/api/qiskit/qiskit.quantum_info.SparseObservable.mdx
+++ b/docs/api/qiskit/qiskit.quantum_info.SparseObservable.mdx
@@ -744,7 +744,7 @@ $$
   <Function id="qiskit.quantum_info.SparseObservable.pauli_bases" signature="pauli_bases()">
     Get a [`PauliList`](qiskit.quantum_info.PauliList "qiskit.quantum_info.PauliList") object that represents the measurement basis needed for each term (in order) in this observable.
 
-    For example, the projector `0l+` will return a Pauli `ZXY`. The resulting [`Pauli`](qiskit.quantum_info.Pauli "qiskit.quantum_info.Pauli") is dense, in the sense that explicit identities are stored. An identity in the Pauli output does not require a concrete measurement.
+    For example, the projector `0l+` will return a Pauli `ZYX`. The resulting [`Pauli`](qiskit.quantum_info.Pauli "qiskit.quantum_info.Pauli") is dense, in the sense that explicit identities are stored. An identity in the Pauli output does not require a concrete measurement.
 
     This will return an entry in the Pauli list for every term in the sum.
 
